# rakuen

./: .gitignore  Cargo.toml  LICENSE  README.md  biome.json  package.json  pnpm-lock.yaml  tsconfig.json
apps/desktop/: biome.json  package.json  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/web/: biome.json  index.html  package.json  tsconfig.json  vite.config.ts
apps/web/src/: index.tsx
core/: Cargo.toml
core/src/: config.rs  context.rs  errors.rs  lib.rs  main.rs
core/src/api/: anime.rs  auth.rs  light_novel.rs  log.rs  manga.rs  mod.rs  program.rs  user.rs
core/src/common/: auth.rs  crypto.rs  logging.rs  mod.rs  uuid.rs
core/src/enity/: anime.rs  light_novel.rs  user.rs
core/src/model/: mod.rs
crates/enity/: Cargo.toml
crates/enity/src/: anime.rs  lib.rs  manga.rs  user.rs
crates/migration/: Cargo.toml
crates/migration/src/: lib.rs  m20231220_151509_basic_user.rs
