[workspace]
resolver = "2"
members = ["core", "apps/desktop/src-tauri", "crates/*"]

[workspace.package]
edition = "2021"
readme = "README.md"
authors = ["Ns2Kracy <ns2kracy@gmail.com>"]
homepage = "https://github.com/Ns2Kracy/rakuen"
repository = "https://github.com/Ns2Kracy/rakuen"

[workspace.dependencies]
# async runtime
tokio = { version = "1.34.0", features = ["full"] }

# serialization and deserialization
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version = "1.0.108" }

# orm
sea-orm = { version = "0.12.10" }

# time
chrono = "0.4.31"
