[package]
name = "rakuen-core"
version = "0.1.0"
edition.workspace = true
readme.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
default-run = "rakuen-core"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sea-orm = { workspace = true, features = [
    "sqlx-sqlite",
    "runtime-tokio-native-tls",
    "macros",
] }
tokio = { workspace = true }
chrono = { workspace = true }
rakuen-enity = { path = "../crates/enity" }
rakuen-migration = { path = "../crates/migration" }
anyhow = "1.0.75"
thiserror = "1.0.50"
once_cell = "1.18.0"
validator = { version = "0.16.1", features = ["derive"] }
bcrypt = "0.15.0"
jsonwebtoken = "9.1.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["chrono"] }
tracing-appender = "0.2.3"
axum = { version = "0.7.1", features = ["tracing", "ws"] }
axum-extra = { version = "0.9.0", features = ["cookie", "typed-header"] }
hyper = { version = "1.0.1", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.0", features = ["full"] }
uuid = { version = "1.6.1", features = ["v4"] }
dotenv = "0.15.0"
rand = "0.8.5"
ring = "0.17.7"
data-encoding = "2.5.0"
